--- a/assets/css/table.css
+++ b/assets/css/table.css
@@ -33,12 +33,13 @@
     text-align: left;
     /* Left-align text */
     padding: 12px;
+    border: 1px solid;
     /* Add padding */
 }
 
 #myTable tr {
     /* Add a bottom border to all table rows */
-    border-bottom: 1px solid;
+    border: 1px solid;
     border-left: 1px solid;
     border-right: 1px solid;
 }
@@ -56,4 +57,14 @@ tr:nth-child(even) {
 input {
     background-color: #000;
     color: #fffad5;
+}
+
+tBody {
+    overflow-y: auto;
+    display: block;
+    max-height: 750px;
+}
+
+.custom-clickable-row {
+    cursor: pointer;
 }
