--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,14 +5,14 @@
 html,
 body {
     height: 100%;
-    width: 100%;
+    width: 99%;
     margin: 0;
     padding: 0;
 }
 
 body {
     font-family: Roboto, Arial, Helvetica, sans-serif;
-    background-image: url(../images/background.png);
+    background-image: url(../images/background8.jpg);
     background-size: cover;
     background-position: 50% 100%;
     display: table;
