--- a/assets/css/table.css
+++ b/assets/css/table.css
@@ -51,7 +51,11 @@
 }
 
 tr:nth-child(even) {
-    background-color: rgb(29, 29, 29);
+    background-color: rgba(0, 0, 0, 0.75);
+}
+
+tr:nth-child(odd) {
+    background-color: rgba(53, 53, 53, 0.75);
 }
 
 input {
@@ -62,7 +66,7 @@ input {
 tBody {
     overflow-y: auto;
     display: block;
-    max-height: 750px;
+    max-height: 720px;
 }
 
 .custom-clickable-row {
